# crewAI

./: .gitignore
claygent/: .gitignore  README.md  api.py  pyproject.toml
claygent/src/claygent/: api.py  crew.py  main.py  requirements.txt
claygent/src/claygent/config/: agents.yaml  tasks.yaml
claygent/src/claygent/sheets/: .clasp.json  Code.js
requirements/: expose_to_googlesheets.md
