[tool.poetry]
name = "claygent"
version = "0.1.0"
description = "claygent using crewAI with FastAPI wrapper"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }
fastapi = "^0.104.0"
uvicorn = "^0.23.2"

[tool.poetry.scripts]
claygent = "claygent.main:run"
run_crew = "claygent.main:run"
train = "claygent.main:train"
replay = "claygent.main:replay"
test = "claygent.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
